Savepoint.getLast()